# openjp2k-bench

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
cmake/: Flags.cmake  Versions.cmake
corpus/: README.md  synthetic-iter.txt
docs/: methodology.md
docs/superpowers/plans/: 2026-05-16-bench-and-corpus.md  2026-05-18-yuv-and-nonregression-split.md
docs/superpowers/specs/: 2026-05-16-bench-and-corpus-design.md  2026-05-18-scale-track.md
scripts/: build.sh  build_manifest.sh  check_corpus.sh  classify_nonregression.py  gen_corpus.sh  manifest_tool.py  report.py  report_scale.py  run_bench.sh  run_correctness.sh  run_scale.sh  run_smoke.sh  run_smoke_roi.sh  select_synthetic_iter.py  setup.sh
src/: adapter.h  adapter_grok.cpp  adapter_openjpeg.cpp  adapter_opj.cpp  bench.cpp  bench.h  build_info.h.in  env_capture.cpp  env_capture.h  json_out.cpp  json_out.h  main.cpp  opj_dyn.cpp  opj_dyn.h  rss.cpp  rss.h  thread_pool.h  verify.cpp  verify.h
tests/: manifest_tool_test.py  smoke.sh
tests/fixtures/: README.md  tiny.jp2  tiny_420.jp2  tiny_422.jp2
